2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Tries to open the file to ensure it
    exists (egrep implementation).

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Added a pure-ruby implementation. It
    shares as much code as possible with the egrep implementation. FIXME: Find a
    way to look up words in EUC-JP with reasonable performance in the pure
    Ruby implementation... Search in EUC-JP-encoded files disabled for now in
    this implementation.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Added convert_utf8_to(dest_enc, str) helper
    method.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * README: Update projects metadata, since Fantasdic now supports multiple
    dictionary sources.
    * fantasdic.desktop: Ditto.
    * lib/fantasdic.rb: Ditto.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic.rb: Don't rescue "require 'gettext'" here anymore.
    * lib/fantasdic/gettext.rb: Rescue it here. And add ngettext method for the
    replacement module.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/browser.rb: Invoke yelp directly if libgnome2-ruby is
    not present but yelp is available.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Now saves the "scan clipboard" option in
    the config file. Adds ctrl + shift + S as keyboard shortcut. Reported
    by Dmitry Rutsky (Debian bug #442336).

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Yet another problem with cache fixed.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/config/default.yaml: Change window's size in initial
    config file. Add es.dict.org and nihongobenkyo.org to dictionaries.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>
