@@ -15,6 +15,48 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
+require "thread"
+
+module Gtk
+    # Thread-safety stuff.
+    # Loosely based on booh, by Guillaume Cottenceau.
+
+    PENDING_CALLS_MUTEX = Mutex.new
+    PENDING_CALLS = []
+
+    def self.thread_protect(&proc)
+        if Thread.current == Thread.main
+            proc.call
+        else
+            PENDING_CALLS_MUTEX.synchronize do
+                PENDING_CALLS << proc
+            end
+        end
+    end
+
+    def self.thread_flush
+        if PENDING_CALLS_MUTEX.try_lock
+            for closure in PENDING_CALLS
+                closure.call
+            end
+            PENDING_CALLS.clear
+            PENDING_CALLS_MUTEX.unlock
+        end
+    end
+
+    def self.init_thread_protect
+        Gtk.timeout_add(100) do
+            PENDING_CALLS_MUTEX.synchronize do
+                for closure in PENDING_CALLS
+                    closure.call
+                end
+                PENDING_CALLS.clear
+            end
+            true
+        end
+    end
+end
+
 class Gtk::TreeView
     def has_row_selected?
         self.selection.selected_each { return true }
