@@ -1,5 +1,12 @@
 2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * lib/fantasdic/ui/utils.rb: Code to do GUI stuff inside Ruby threads
+    safely. Loosely based on booh, by Guillaume Cottenceau.
+    * lib/fantasdic/ui/main_app.rb: Uses the above.
+    * lib/fantasdic/ui/add_dictionary_dialog.rb: Uses the above.
+
+2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * lib/fantasdic/sources/edict_file.rb: Tries to open the file to ensure it
     exists (egrep implementation).
 
